  in your code, you can replace it with public GetWindowBorderSize().

- Microsoft Visual Studio 2003 (a.k.a. MSVC 7) is not supported any longer, the
  minimum required version is now 2005.


3.2.4: (released 2024-??-??)
----------------------------

All:

- Allow creating wxArrays from std::initialized_list (Lotendan, #23966).

All (GUI):

- Fix refreshing multiple selection items in generic wxListCtrl.

wxGTK:

- Fix some regressions introduced in 3.2.3:
  * Don't crash in console apps linked with GUI libraries (#23981).
  * Fix possible crash and too high CPU use when using EGL (#24018).
  * Fix losing clipboard contents when clearing a different selection (#23988).

wxMSW:

- Fix MSVS warning about redundant "const" in wx/itemid.h (#23590).
- Fix spurious memory leak reports when using static CRT.

wxOSX:

- Fix showing windows for background apps under macOS Sonoma (#23893).


3.2.3: (released 2023-10-10)
----------------------------

All:

- Fix wxTranslations::AddStdCatalog() and add AddAvailableCatalog() (#18227).
- Add move ctor and assignment operator to wxString (Pavel Tyunin, #23224).
- Enable large file support in Unix CMake builds (Maarten Bent, #22750).
- Make wxSocket::Peek() work with UDP too (Brian Nixon, #23594, #23604).
- Update Georgian translations (NorwayFun, #22673).
- Don't use invalid iterator in wxString in UTF-8 build (Ian Day, #23305).
- Fix wrong description for some languages (Ulrich Telle, #23419).
- Fix infinite loop in wxFTP::GetFilesList() (#23519).
- Fix memory leak when using wx from non-wx threads (Antti Nietosvaara, #23535).
- Use grep instead of fgrep and egrep in makefiles/scripts (#23537).
- Use /etc/os-release if lsb_release isn't available (Scott Talbert, #23712).
- Add wxUILocale::GetMonthName() and GetWeekDayName() (Ulrich Telle, #23556).
- Support WAV files with LIST chunks under Unix (A. Jiang, #23859).
- Fix CMake build if wxWidgets directory contained "++" (Maarten Bent, #22738).

All (GUI):
