@@ -237,7 +237,7 @@ void IntlTestCase::IsAvailable()
     CPPUNIT_ASSERT_EQUAL( origLocale, setlocale(LC_ALL, NULL) );
 }
 
-TEST_CASE("wxTranslations::Available", "[translations]")
+TEST_CASE("wxTranslations::AddCatalog", "[translations]")
 {
     // We currently have translations for French and Japanese in this test
     // directory, check that loading those succeeds but loading others doesn't.
@@ -267,6 +267,21 @@ TEST_CASE("wxTranslations::Available", "[translations]")
     {
         trans.SetLanguage(wxLANGUAGE_ITALIAN);
         CHECK_FALSE( trans.AddAvailableCatalog(domain) );
+    }
+
+    // And loading catalog using the same language as message IDs should
+    // "succeed" too, even if there is no such file, as in this case the
+    // message IDs themselves can be used directly.
+    SECTION("Untranslated")
+    {
+        trans.SetLanguage(wxLANGUAGE_GERMAN);
+        CHECK( trans.AddCatalog(domain, wxLANGUAGE_GERMAN) );
+
+        // Using a different region should still work.
+        CHECK( trans.AddCatalog(domain, wxLANGUAGE_GERMAN_SWISS) );
+
+        // But using a completely different language should not.
+        CHECK_FALSE( trans.AddCatalog(domain, wxLANGUAGE_DUTCH) );
     }
 }
 
